added responsiveness changes

--- a/src/StyleSheets/Main.css
+++ b/src/StyleSheets/Main.css
@@ -1,15 +1,5 @@
 
 
-/* .container div {
-    font-family: monospace;
-    font-size: 20px;
-    /* text-align: center; */
-    /* // This is just stling the text in the boxes to be centered */
-     /* display: flex; 
-    align-items: center;
-    justify-content: center;
-  } */
- 
   .red {
     background-color: #ff7d7d;
   }
@@ -37,15 +27,13 @@
     bottom: 0;
   }
   
-  .blue {
-    background-color: #94c1ff;
-  }
-  
-  .purple {
-    background-color: #c380c3;
-  }
-  
+    
   .containerMain {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .container{
     display: flex;
     flex-wrap: wrap;
   }
@@ -61,7 +49,8 @@
   }
   
   .yellow {
-    flex: 3;
+    /* flex: 3; */
+    height:100vh;
     /* height: 200px; */
     /* height: var(--middleHeight); */
   }
@@ -80,10 +69,12 @@
     /* text-align: center; */
     /* text-decoration: none; */
     list-style: none;
+  
 }
 
 .li{
     margin-top: 15px;
+    display: list-item !important;
 }
 .li:hover{
     color:yellowgreen;
@@ -152,7 +143,7 @@ img {
   }
    
   .cards {
-    display: flex;
+    /* display: flex; */
     /* flex-wrap: wrap; this is for responsiveness. for iphone this is needed*/
     list-style: none;
     margin: 0;
@@ -160,7 +151,7 @@ img {
   }
   
   .cards__item {
-    display: flex;
+    /* display: flex; */
     padding: 1rem;
     @media(min-width: 40rem) {
       width: 50%;
@@ -174,8 +165,8 @@ img {
     background-color: white;
     border-radius: 0.25rem;
     box-shadow: 0 20px 40px -14px rgba(0,0,0,0.25);
-    display: flex;
-    flex-direction: column;
+    /* display: flex; */
+    /* flex-direction: column; */
     overflow: hidden;
     /* &:hover {
       .card__image {
@@ -201,7 +192,7 @@ img {
     /* //filter: saturate(180%); */
     overflow: hidden;
     position: relative;
-    height: 150px;
+    /* height: 150px; */
     transition: filter 0.5s cubic-bezier(.43,.41,.22,.91);;
     /* &::before {
       content: "";
@@ -211,7 +202,7 @@ img {
    
   }
   
-  .card__image--flowers {
+  /* .card__image--flowers {
     background-image: url(https://unsplash.it/800/600?image=82);
   }
   
@@ -221,11 +212,11 @@ img {
   
   .card__image--record {
     background-image: url(https://unsplash.it/800/600?image=39);
-  }
+  } */
   
-  .card__image--fence {
+  /* .card__image--fence {
     background-image: url(https://unsplash.it/800/600?image=59);
-  }
+  } */
   
   .card__title {
     color: grey;
@@ -242,4 +233,24 @@ img {
     margin-bottom: 1.25rem;
   }
   
-  
+  /*START*/
+  .MainContainer{
+    display: flex;
+  }
+
+  .sideBar{
+    flex:1
+  }
+
+  .RightSideBar{
+    flex:4
+  }
+
+  .mainDisplay{
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .sideBar{
+    background-color: black;
+  }
