--- a/src/StyleSheets/Main.css
+++ b/src/StyleSheets/Main.css
@@ -1,256 +1,135 @@
-
-
-  .red {
-    background-color: #ff7d7d;
-  }
-  
-  .orange {
-    background-color: black;
-    text-align: center;
-    display:table;
-   
-  }
-  
-  .yellow {
-    background-color:rgb(46,63,87);;
-    /* display: flex; */
-    justify-content: center;
-    text-align: center;
-  }
-  
-  .green {
-    background-color: #a6eaa6;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: sticky;
-    bottom: 0;
-  }
-  
-    
-  .containerMain {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .container{
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .red {
-    flex-basis: 100%;
-  
-  }
-  
-  .orange {
-     /* flex: 1;  */
-    height: 100vh;
-  }
-  
-  .yellow {
-    /* flex: 3; */
-    height:100vh;
-    /* height: 200px; */
-    /* height: var(--middleHeight); */
-  }
-  
-  .green {
-      background-color: #383838	;
-    flex-basis: 100%;
-    height: 100px;
-    text-align: center;
-    /* height: var(--footerHeight); */
-  }
-
-  .ulList {
-    color: white !important;
-    font-weight: bold;
-    /* text-align: center; */
-    /* text-decoration: none; */
-    list-style: none;
-  
+/* MainContainer,side Bar */
+.MainContainer {
+  display: flex;
 }
 
-.li{
-    margin-top: 15px;
-    display: list-item !important;
-}
-.li:hover{
-    color:yellowgreen;
-    border-left: 2px solid yellowgreen;
-    cursor: pointer;
-}
-  
-.nav-btn{
-    margin-bottom:100px;
-  }
-  
-  .nav-link{
-    color:white;
-    font-weight: bolder;
-    padding: 10px;
-    text-decoration: none;
-  }
-  
-  .nav-item.nav-link:hover{
-    border:1px solid crimson;
-    border-width: 0px 0px 1px 0px;
-    color:greenyellow;
-    text-decoration: none;
-  }
-  
-  .mainLinks {
-    color : white;
-    font-weight : bold
-  }
-  
-  .mainLinks:hover {
-    color : yellowgreen
-  }
-
-#btnNext,#btnPrevious,#btnShuffle,#btnRepeat{
-    width: 20px;
-    height: 20px;
-    padding: 10px;
+.sideBar {
+  flex: 1;
+  background-color: black;
 }
 
-#btnPlay{
-    width: 30px;
-    height: 20px;
-    padding: 10px;
+.RightSideBar {
+  flex: 4;
+}
+
+.mainDisplay {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+/* List insie side bar */
+.ulList {
+  color: white !important;
+  font-weight: bold;
+  list-style: none;
+}
+
+.li {
+  margin-top: 15px;
+  display: list-item !important;
+}
+.li:hover {
+  color: yellowgreen;
+  border-left: 2px solid yellowgreen;
+  cursor: pointer;
+}
+
+/* NavBar on Main */
+.nav-btn {
+  margin-bottom: 100px;
+}
+
+.nav-link {
+  color: white;
+  font-weight: bolder;
+  padding: 10px;
+  text-decoration: none;
+}
+
+.nav-item.nav-link:hover {
+  border: 1px solid crimson;
+  border-width: 0px 0px 1px 0px;
+  color: greenyellow;
+  text-decoration: none;
+}
+
+.mainLinks {
+  color: white;
+  font-weight: bold;
+}
+
+.mainLinks:hover {
+  color: yellowgreen;
+}
+
+/* For Footer Buttons */
+#btnNext,
+#btnPrevious,
+#btnShuffle,
+#btnRepeat {
+  width: 20px;
+  height: 20px;
+  padding: 10px;
+}
+
+#btnPlay {
+  width: 30px;
+  height: 20px;
+  padding: 10px;
 }
 
 /*Cards*/
 img {
-    height: auto;
-    max-width: 100%;
-    vertical-align: middle;
-  }
-  
-  .btn {
-    background-color: white;
-    border: 1px solid grey;
-    /* //border-radius: 1rem; */
-    color: grey;
-    padding: 0.5rem;
-    text-transform: lowercase;
-  }
-  
-  .btn--block {
-    display: block;
-    width: 100%;
-  }
-   
-  .cards {
-    /* display: flex; */
-    /* flex-wrap: wrap; this is for responsiveness. for iphone this is needed*/
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .cards__item {
-    /* display: flex; */
-    padding: 1rem;
-    @media(min-width: 40rem) {
-      width: 50%;
-    }
-    @media(min-width: 56rem) {
-      width: 33.3333%;
-    }
-  }
-  
-  .card {
-    background-color: white;
-    border-radius: 0.25rem;
-    box-shadow: 0 20px 40px -14px rgba(0,0,0,0.25);
-    /* display: flex; */
-    /* flex-direction: column; */
-    overflow: hidden;
-    /* &:hover {
-      .card__image {
-        filter: contrast(100%);
-      } */
-    /* } */
-  }
-  
-  .card__content {
-    display: flex;
-    flex: 1 1 auto;
-    flex-direction: column;
-    padding: 1rem;
-  }
-  
-  .card__image {
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-top-left-radius: 0.25rem;
-    border-top-right-radius: 0.25rem;
-    filter: contrast(70%);
-    /* //filter: saturate(180%); */
-    overflow: hidden;
-    position: relative;
-    /* height: 150px; */
-    transition: filter 0.5s cubic-bezier(.43,.41,.22,.91);;
-    /* &::before {
-      content: "";
-        display: block;
-      padding-top: 56.25%; // 16:9 aspect ratio
-    }*/
-   
-  }
-  
-  /* .card__image--flowers {
-    background-image: url(https://unsplash.it/800/600?image=82);
-  }
-  
-  .card__image--river {
-    background-image: url(https://unsplash.it/800/600?image=11);
-  }
-  
-  .card__image--record {
-    background-image: url(https://unsplash.it/800/600?image=39);
-  } */
-  
-  /* .card__image--fence {
-    background-image: url(https://unsplash.it/800/600?image=59);
-  } */
-  
-  .card__title {
-    color: grey;
-    font-size: 1.25rem;
-    font-weight: 300;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-  }
-  
-  .card__text {
-    flex: 1 1 auto;
-    font-size: 0.875rem;
-    line-height: 1.5;
-    margin-bottom: 1.25rem;
-  }
-  
-  /*START*/
-  .MainContainer{
-    display: flex;
-  }
+  height: auto;
+  vertical-align: middle;
+}
 
-  .sideBar{
-    flex:1
-  }
+.cards {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 
-  .RightSideBar{
-    flex:4
+.cards__item {
+  padding: 1rem;
+  @media (min-width: 40rem) {
+    width: 50%;
   }
+  @media (min-width: 56rem) {
+    width: 33.3333%;
+  }
+}
 
-  .mainDisplay{
-    display: flex;
-    flex-wrap: wrap;
-  }
+.card {
+  background-color: white;
+  border-radius: 0.25rem;
+  box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
+  overflow: hidden;
+}
 
-  .sideBar{
-    background-color: black;
-  }
+.card__content {
+  display: flex;
+  flex: 1 1 auto;
+  flex-direction: column;
+  padding: 1rem;
+}
+
+.card__image {
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+  filter: contrast(70%);
+  overflow: hidden;
+  position: relative;
+  transition: filter 0.5s cubic-bezier(0.43, 0.41, 0.22, 0.91);
+}
+
+.card__text {
+  flex: 1 1 auto;
+  font-size: 0.875rem;
+  font-weight: bold;
+  line-height: 1.5;
+  margin-bottom: 1.25rem;
+}
