--- a/src/StyleSheets/Home.css
+++ b/src/StyleSheets/Home.css
@@ -1,11 +1,13 @@
-a#btnSpotify {
+#btnSpotify {
   color: black!important;
   font-size: xx-large!important;
   background: aliceblue!important;
   border: wheat!important;
   border-radius: 15px!important;
   text-align: center!important;
-  height: 70px;
+  flex-basis: 100%;
+  height: 100px;
+  flex-direction: row;
 }
 
 .home {
@@ -15,4 +17,20 @@ a#btnSpotify {
   justify-content: center;
   background: #1E1E1E;
   padding: 300px;
+}
+
+#divbtnHome{
+  display: flex;
+  
+  flex-basis: 40%;
+  align-items: center;
+  justify-content: center;
+  padding-top: 90px;
+
+}
+
+#divLoader{
+   /* flex:1; */
+   padding-top: 20px;
+   flex-direction: row;
 }
