--- a/src/StyleSheets/Home.css
+++ b/src/StyleSheets/Home.css
@@ -1,36 +1,39 @@
+/* button for spotify login */
 #btnSpotify {
-  color: black!important;
-  font-size: xx-large!important;
-  background: aliceblue!important;
-  border: wheat!important;
-  border-radius: 15px!important;
-  text-align: center!important;
+  color: black !important;
+  font-size: xx-large !important;
+  background: aliceblue !important;
+  border: wheat !important;
+  border-radius: 15px !important;
+  text-align: center !important;
   flex-basis: 100%;
   height: 100px;
   flex-direction: row;
 }
 
+/* container */
 .home {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  background: #1E1E1E;
+  background: #1e1e1e;
   padding: 300px;
 }
-
-#divbtnHome{
+#homeBtnSpotifyCont {
   display: flex;
-  
+  flex-direction: column;
   flex-basis: 40%;
+  text-align: center;
+}
+#divbtnHome {
+  display: flex;
+  flex: 1;
   align-items: center;
   justify-content: center;
-  padding-top: 90px;
-
 }
 
-#divLoader{
-   /* flex:1; */
-   padding-top: 20px;
-   flex-direction: row;
+/* loader */
+#divLoader {
+  padding-top: 20px;
 }
