--- a/src/StyleSheets/Artists.css
+++ b/src/StyleSheets/Artists.css
@@ -1,94 +1,81 @@
-.MainContainer{
-    display: flex;
+/* cotainer and side bar */
+.MainContainer {
+  display: flex;
 }
 
-.Right{
-    flex:3
+/* Right container */
+.Right {
+  flex: 3;
 }
 
-.searchText{
-    flex-direction: row;
+/* div for text box */
+.searchText {
+  flex-direction: row;
 }
 
-.otherContent{
-display: flex;
-flex-wrap: wrap;
+/* right side cards container */
+.otherContent {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.content{
-    display: flex;
-    flex: 3;
-    flex-wrap: wrap;
+.content {
+  display: flex;
+  flex: 3;
+  flex-wrap: wrap;
 }
 
-.inputText{
-    width: 500px;
-    margin-top: 30px;
-    margin-bottom: 20px;
-    border: 1px solid black;
-    height: 40px;
-    border-radius: 15px;
-    font-weight: bold;
-    font-size: large;
-    margin-left: 30px;
+/* Input text */
+.inputText {
+  width: 500px;
+  margin-top: 30px;
+  margin-bottom: 20px;
+  border: 1px solid black;
+  height: 40px;
+  border-radius: 15px;
+  font-weight: bold;
+  font-size: large;
+  margin-left: 30px;
 }
 
 /* cards */
 img {
-    height: auto;
-    vertical-align: middle;
-  }
-  
-  .cards {
-    list-style: none;
-    margin: 0;
-    /* padding: 0; */
-  }
-  
-  .cards__item {
-    padding: 1rem;
-    @media (min-width: 40rem) {
-      width: 50%;
-    }
-    @media (min-width: 56rem) {
-      width: 33.3333%;
-    }
-  }
-  
-  .card {
-    background-color: white;
-    border-radius: 0.25rem;
-    box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
-    overflow: hidden;
-  }
-  
-  .card__content {
-    display: flex;
-    flex: 1 1 auto;
-    flex-direction: column;
-    padding: 1rem;
-  }
-  
-  .card__image {
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-top-left-radius: 0.25rem;
-    border-top-right-radius: 0.25rem;
-    overflow: hidden;
-    position: relative;
-    width: 300px;
-    /* transition: filter 0.5s cubic-bezier(0.43, 0.41, 0.22, 0.91); */
-  }
-  .card__title {
-    font-size: larger;
-    font-weight: bolder;
-  }
-  .card__text {
-    flex: 1 1 auto;
-    font-size: 0.875rem;
-    font-weight: bold;
-    line-height: 1.5;
-    margin-bottom: 1.25rem;
-  }
-  
+  vertical-align: middle;
+}
+
+.card {
+  background-color: white;
+  border-radius: 0.25rem;
+  box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
+  overflow: hidden;
+}
+
+/* cards content */
+.card__content {
+  display: flex;
+  flex: 1 1 auto;
+  flex-direction: column;
+  padding: 1rem;
+}
+
+/* cards title */
+.card__title {
+  font-size: larger;
+  font-weight: bolder;
+}
+
+/* card Text */
+.card__text {
+  flex: 1 1 auto;
+  font-size: 0.875rem;
+  font-weight: bold;
+  line-height: 1.5;
+  margin-bottom: 1.25rem;
+}
+
+/* for card Image */
+.divImg {
+  width: 300px;
+  height: 300px;
+  overflow: hidden;
+}
