--- a/src/StyleSheets/PlayList.css
+++ b/src/StyleSheets/PlayList.css
@@ -1,89 +1,52 @@
-.container{
-    display: flex;
-    flex-wrap: unset;
+/* main container */
+.container {
+  display: flex;
+  flex-wrap: unset;
 }
 
-.leftCol{
-    background-color: black;
-    text-align: center;
-    display:table;
-    height: 100vh;
+/* button=>tracks button */
+#btnPlayList {
+  width: 100px;
+  height: 40px;
+  background-color: green;
+  border: 1px solid green;
+  justify-content: center;
+  border-radius: 15px;
+  margin-left: 100px;
+  margin-top: 10px;
+  font-weight: bold;
+  font-size: large;
+  cursor: pointer;
 }
 
-.ulList {
-    color: white !important;
-    font-weight: bold;
-    list-style: none;
+/* main left content for Image */
+.mainLeftContent {
+  flex-grow: 1;
+  padding: 100px;
+  justify-content: center;
 }
 
-.li{
-    margin-top: 15px;
-}
-.li:hover{
-    color:yellowgreen;
-    border-left: 2px solid yellowgreen;
-    cursor: pointer;
+/* left side Image */
+#imgMain {
+  height: 300px !important;
+  width: 300px !important;
+  justify-content: center;
 }
 
-.mainContent{
-
+/* main right content for tracks */
+.mainRightContent {
+  flex-grow: 3;
+  padding: 100px;
 }
 
-#btnNext,#btnPrevious,#btnShuffle,#btnRepeat{
-    width: 20px;
-    height: 20px;
-    padding: 10px;
+.footer {
+  background-color: #383838;
+  flex-basis: 100%;
+  height: 100px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: sticky;
+  bottom: 0;
 }
-
-#btnPlayList{
-    width: 100px;
-    height: 40px;
-    background-color: green;
-    border: 1px solid green;
-    justify-content: center;
-    border-radius: 15px;
-    margin-left: 100px;
-    margin-top: 10px;
-    font-weight: bold;
-    font-size: large;
-    cursor: pointer;
-}
-
-.mainContent{
-    display: flex;
-    flex-grow: 2;
-}
-
-.mainLeftContent{
- flex-grow: 1;
- padding: 100px;
- justify-content: center;
-}
-
-.mainRightContent{
-   flex-grow: 3;
-    padding: 100px; 
-}
-
-#imgMain{
-    height: 300px !important;
-    width: 300px !important;
-    justify-content: center;
-}
-
-audio{
-    width: 550px !important;
-    height: 90px !important;
-}
-.footer{
-    background-color: #383838	;
-    flex-basis: 100%;
-    height: 100px;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: sticky;
-    bottom: 0;
-}
-  
