--- a/src/StyleSheets/PlayList.css
+++ b/src/StyleSheets/PlayList.css
@@ -39,7 +39,9 @@
   padding: 100px;
 }
 
-.footer {
+/* .footer {
+  display: flex;
+  flex: 1;
   background-color: #383838;
   flex-basis: 100%;
   height: 100px;
@@ -49,4 +51,5 @@
   align-items: center;
   position: sticky;
   bottom: 0;
-}
+} */
+
